src/tacky/snapshots/minic__tacky__tacky_tests__binary.snap
---
source: src/tacky/tacky_tests.rs
expression: "test_string_success(\"int main(void) { return 1 + 2 * 3; }\")?"
---
- name: main
  params: []
  body:
    - Binary:
        op: Multiply
        dest:
          Var: pv.0
        left:
          Constant: 2
        right:
          Constant: 3
    - Binary:
        op: Add
        dest:
          Var: pv.1
        left:
          Constant: 1
        right:
          Var: pv.0
    - ReturnValue:
        Var: pv.1
    - ReturnValue:
        Constant: 0
