src/tacky/snapshots/minic__tacky__tacky_tests__comparison.snap
---
source: src/tacky/tacky_tests.rs
expression: "test_string_success(\"int main(void) { return 1 < 2 && 3 >= 4; }\")?"
---
- name: main
  params: []
  body:
    - Binary:
        op: LessThan
        dest:
          Var: pv.0
        left:
          Constant: 1
        right:
          Constant: 2
    - JumpIfZero:
        - Var: pv.0
        - and_false.1_31
    - Binary:
        op: GreaterEqual
        dest:
          Var: pv.1
        left:
          Constant: 3
        right:
          Constant: 4
    - JumpIfZero:
        - Var: pv.1
        - and_false.1_31
    - Copy:
        dest:
          Var: pv.2
        src:
          Constant: 1
    - Jump: and_end.1_31
    - Label: and_false.1_31
    - Copy:
        dest:
          Var: pv.2
        src:
          Constant: 0
    - Label: and_end.1_31
    - ReturnValue:
        Var: pv.2
    - ReturnValue:
        Constant: 0
