src/tacky/snapshots/minic__tacky__tacky_tests__group_unary.snap
---
source: src/tacky/tacky_tests.rs
expression: "test_string_success(\"int main(void) { return -(-~-42); }\")?"
---
- name: main
  params: []
  body:
    - Unary:
        op: Negate
        dest:
          Var: pv.0
        src:
          Constant: 42
    - Unary:
        op: BitNot
        dest:
          Var: pv.1
        src:
          Var: pv.0
    - Unary:
        op: Negate
        dest:
          Var: pv.2
        src:
          Var: pv.1
    - Unary:
        op: Negate
        dest:
          Var: pv.3
        src:
          Var: pv.2
    - ReturnValue:
        Var: pv.3
    - ReturnValue:
        Constant: 0
