src/tacky/snapshots/minic__tacky__tacky_tests__logic.snap
---
source: src/tacky/tacky_tests.rs
expression: "test_string_success(\"int main(void) { return 1 && 0 || 1; }\")?"
---
- name: main
  params: []
  body:
    - JumpIfZero:
        - Constant: 1
        - and_false.1_27
    - JumpIfZero:
        - Constant: 0
        - and_false.1_27
    - Copy:
        dest:
          Var: pv.0
        src:
          Constant: 1
    - Jump: and_end.1_27
    - Label: and_false.1_27
    - Copy:
        dest:
          Var: pv.0
        src:
          Constant: 0
    - Label: and_end.1_27
    - JumpIfNotZero:
        - Var: pv.0
        - or_true.1_32
    - JumpIfNotZero:
        - Constant: 1
        - or_true.1_32
    - Copy:
        dest:
          Var: pv.1
        src:
          Constant: 0
    - Jump: or_end.1_32
    - Label: or_true.1_32
    - Copy:
        dest:
          Var: pv.1
        src:
          Constant: 1
    - Label: or_end.1_32
    - ReturnValue:
        Var: pv.1
    - ReturnValue:
        Constant: 0
