src/tacky/snapshots/minic__tacky__tacky_tests__logic_short_circuit.snap
---
source: src/tacky/tacky_tests.rs
expression: "test_string_success(\"int main(void) { return 1 || (1 / 0); }\")?"
---
- name: main
  params: []
  body:
    - JumpIfNotZero:
        - Constant: 1
        - or_true.1_27
    - Binary:
        op: Divide
        dest:
          Var: pv.0
        left:
          Constant: 1
        right:
          Constant: 0
    - JumpIfNotZero:
        - Var: pv.0
        - or_true.1_27
    - Copy:
        dest:
          Var: pv.1
        src:
          Constant: 0
    - Jump: or_end.1_27
    - Label: or_true.1_27
    - Copy:
        dest:
          Var: pv.1
        src:
          Constant: 1
    - Label: or_end.1_27
    - ReturnValue:
        Var: pv.1
    - ReturnValue:
        Constant: 0
