src/tacky/snapshots/minic__tacky__tacky_tests__simpl_return.snap
---
source: src/tacky/tacky_tests.rs
expression: "test_string_success(\"int main(void) { return 0; }\")?"
---
- name: main
  params: []
  body:
    - ReturnValue:
        Constant: 0
    - ReturnValue:
        Constant: 0
